menu updating feature

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Playfair+Display:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
@@ -16,9 +16,31 @@
             colors: {
               nfsu: {
                 navy: '#002147',
+                navyLight: '#003366',
                 maroon: '#800000',
+                maroonLight: '#A00000',
                 gold: '#C5B358',
-                lightgold: '#F4F1E1'
+                goldAccent: '#D4AF37',
+                cream: '#F4F1E1',
+                paper: '#fdfcf8'
+              }
+            },
+            backgroundImage: {
+              'institutional-pattern': "url('https://www.transparenttextures.com/patterns/cubes.png')",
+              'gold-gradient': "linear-gradient(135deg, #C5B358 0%, #D4AF37 50%, #C5B358 100%)",
+            },
+            animation: {
+              'shimmer': 'shimmer 2s infinite linear',
+              'float': 'float 6s ease-in-out infinite',
+            },
+            keyframes: {
+              shimmer: {
+                '0%': { transform: 'translateX(-100%)' },
+                '100%': { transform: 'translateX(100%)' }
+              },
+              float: {
+                '0%, 100%': { transform: 'translateY(0)' },
+                '50%': { transform: 'translateY(-10px)' }
               }
             }
           }
@@ -29,6 +51,9 @@
       body {
         font-family: 'Inter', sans-serif;
         background-color: #f8fafc;
+        background-image: 
+          radial-gradient(circle at 50% 50%, rgba(197, 179, 88, 0.05) 0%, transparent 50%),
+          url('https://www.transparenttextures.com/patterns/diagonal-stripes.png');
       }
       .watermark {
         position: fixed;
@@ -37,28 +62,24 @@
         transform: translate(-50%, -50%) rotate(-30deg);
         font-size: 15vw;
         font-weight: 900;
-        color: rgba(0, 33, 71, 0.03);
+        color: rgba(0, 33, 71, 0.02);
         pointer-events: none;
         z-index: -1;
         white-space: nowrap;
         text-transform: uppercase;
         user-select: none;
+        letter-spacing: 0.1em;
       }
-      .logo-watermark {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 40%;
-        opacity: 0.02;
-        pointer-events: none;
-        z-index: -2;
-      }
-      /* Status Color Coding - Standardized across the site */
       .status-pending { background-color: #fef9c3; color: #854d0e; border-color: #fef08a; }
       .status-served { background-color: #dcfce7; color: #166534; border-color: #bbf7d0; }
       .status-expired { background-color: #fee2e2; color: #991b1b; border-color: #fecaca; }
       .status-archived { background-color: #f1f5f9; color: #475569; border-color: #e2e8f0; }
+      
+      /* Custom scrollbar for brand consistency */
+      ::-webkit-scrollbar { width: 6px; }
+      ::-webkit-scrollbar-track { background: transparent; }
+      ::-webkit-scrollbar-thumb { background: #C5B358; border-radius: 10px; }
+      ::-webkit-scrollbar-thumb:hover { background: #002147; }
     </style>
   <script type="importmap">
 {
@@ -69,11 +90,9 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-slate-50 text-slate-900">
+  <body class="bg-nfsu-paper text-slate-900 selection:bg-nfsu-gold selection:text-nfsu-navy">
     <div class="watermark">NFSU CAMPUS</div>
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+  </body>
 </html>
