login issue resolved

--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-nfsu-paper text-slate-900 selection:bg-nfsu-gold selection:text-nfsu-navy">
     <div class="watermark">NFSU CAMPUS</div>
     <div id="root"></div>
-  </body>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
